Edit CSS to fix scrollbars covering border radius on drag/drop containers

--- a/static/app.css
+++ b/static/app.css
@@ -85,7 +85,7 @@ ul.nav-tabs{
 .dragDropContainer{
     border: 1px solid;
     border-radius: 8px;
-    overflow: scroll;
+    overflow-y: scroll;
     height: 325px;
     margin-top: 10px;
 }
@@ -232,4 +232,19 @@ td {
 
 .operatorsListContainer{
     padding-top: 10px;
+}
+
+/*scrollbars css*/
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 }
